[package]
name = "compressor-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = {version="4.1.4", features=["derive"]}
futures = "0.3.26"
image_compressor = "1.3.0"
reqwest = "0.11.14"
tokio = {version="1.25.0",  features=["full"]}
url = "2.3.1"

